[gd_scene load_steps=4 format=3 uid="uid://bocjanvn67sv5"]

[ext_resource type="Texture2D" uid="uid://x3kktmxxmuht" path="res://imports/tree.png" id="1_j2dd2"]
[ext_resource type="Script" path="res://scripts/tree.gd" id="1_lgjix"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s60js"]
size = Vector2(103, 113.5)

[node name="Tree" type="Node"]
script = ExtResource("1_lgjix")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(721.25, 233)
scale = Vector2(0.534921, 0.52)
texture = ExtResource("1_j2dd2")

[node name="TreeArea" type="Area2D" parent="."]
position = Vector2(719, 236)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TreeArea"]
position = Vector2(1.50012, -1.75)
shape = SubResource("RectangleShape2D_s60js")

[node name="HarvestTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
offset_left = 689.0
offset_top = 151.0
offset_right = 751.0
offset_bottom = 178.0

[node name="RemoveLater" type="Label" parent="."]
visible = false
offset_left = 647.0
offset_top = 297.0
offset_right = 804.0
offset_bottom = 335.0
text = "Hold E for 5 seconds
"

[connection signal="body_entered" from="TreeArea" to="." method="_on_tree_area_body_entered"]
[connection signal="body_exited" from="TreeArea" to="." method="_on_tree_area_body_exited"]
[connection signal="timeout" from="HarvestTimer" to="." method="_on_harvest_timer_timeout"]
